--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "easy-react-boilerplate",
+  "name": "easy-react-boilerplate-2",
   "version": "1.0.0",
-  "main": "index.js",
+  "bin": "src/index.js",
+  "main": "src/index.js",
   "license": "MIT",
   "dependencies": {
     "fs-extra": "^9.0.1",
