chore: add files field in package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.6",
   "bin": "src/index.js",
   "main": "src/index.js",
+  "files": [
+    "templates/**"
+  ],
   "license": "MIT",
   "repository": {
     "type": "git",
