--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "homepage": "https://github.com/jasonlimantoro/easy-react-boilerplate",
   "dependencies": {
+    "copy-dir": "^1.3.0",
     "fs-extra": "^9.0.1",
     "inquirer": "^7.3.3"
   },
