chore: use plain fs.copyDir() with no filter

--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "homepage": "https://github.com/jasonlimantoro/easy-react-boilerplate",
   "dependencies": {
     "fs-extra": "^9.0.1",
-    "inquirer": "^7.3.3",
-    "ncp": "^2.0.0"
+    "inquirer": "^7.3.3"
   },
   "devDependencies": {
     "eslint": "^7.5.0"
