--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "easy-react-boilerplate-2",
+  "name": "easy-react-boilerplate",
   "version": "1.0.15",
   "bin": "src/index.js",
   "main": "src/index.js",
