--- a/templates/react-ts-tailwind-sc/package.json
+++ b/templates/react-ts-tailwind-sc/package.json
@@ -32,6 +32,7 @@
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.2",
     "@types/jest": "^26.0.7",
@@ -68,6 +69,7 @@
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.0.4",
+    "react-refresh": "^0.9.0",
     "remotedev": "^0.2.9",
     "source-map-loader": "^1.0.1",
     "terser-webpack-plugin": "^3.0.7",
