chore: intial working pnp for react-ts-tailwind-sc

--- a/templates/react-ts-tailwind-sc/.gitignore
+++ b/templates/react-ts-tailwind-sc/.gitignore
@@ -7,3 +7,11 @@ stylesheet/tailwind.css
 yalc.lock
 *.env
 .DS_store
+
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
